--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 Flask==3.0.0
-scikit-learn==1.3.0
-joblib==1.3.2
-numpy==1.26.4
-gunicorn==21.2.0
+Cython<3
+scikit-learn>=1.2
+gunicorn
+joblib
+numpy
